--- a/DigitalArtMarketplace.html
+++ b/DigitalArtMarketplace.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Digital Art Marketplace</h1>
-    
+    <h3>new market for new edge</h3>
     <div>
         <button id="connectWallet">Connect Wallet</button>
         <button id="disconnectWallet" style="display:none;">Disconnect Wallet</button>
