--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Art Marketplace</title>
     <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-        button, input { margin: 10px 0; padding: 10px; }
-        #artworkList { margin-top: 20px; }
-        .artwork { border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Digital Art Marketplace</h1>
-    <h3>new market for new edge and security</h3>
+    <h3>New market for new edge and security</h3>
     <div>
         <button id="connectWallet">Connect Wallet</button>
         <button id="disconnectWallet" style="display:none;">Disconnect Wallet</button>
@@ -43,268 +38,10 @@
     
     <div id="artworkList">
         <h2>Available Artworks</h2>
-        <!-- Artworks will be listed here -->
     </div>
     
     <div id="status"></div>
 
-    <script>
-        const contractAddress = '0x609a65060ea0a845864414c38d1d361547b176e8';
-        const contractABI = [
-	{
-		"anonymous": false,
-		"inputs": [
-			{
-				"indexed": false,
-				"internalType": "uint256",
-				"name": "id",
-				"type": "uint256"
-			},
-			{
-				"indexed": false,
-				"internalType": "address",
-				"name": "artist",
-				"type": "address"
-			},
-			{
-				"indexed": false,
-				"internalType": "string",
-				"name": "title",
-				"type": "string"
-			},
-			{
-				"indexed": false,
-				"internalType": "uint256",
-				"name": "price",
-				"type": "uint256"
-			}
-		],
-		"name": "ArtworkListed",
-		"type": "event"
-	},
-	{
-		"anonymous": false,
-		"inputs": [
-			{
-				"indexed": false,
-				"internalType": "uint256",
-				"name": "id",
-				"type": "uint256"
-			},
-			{
-				"indexed": false,
-				"internalType": "address",
-				"name": "seller",
-				"type": "address"
-			},
-			{
-				"indexed": false,
-				"internalType": "address",
-				"name": "buyer",
-				"type": "address"
-			},
-			{
-				"indexed": false,
-				"internalType": "uint256",
-				"name": "price",
-				"type": "uint256"
-			}
-		],
-		"name": "ArtworkSold",
-		"type": "event"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "uint256",
-				"name": "_id",
-				"type": "uint256"
-			}
-		],
-		"name": "buyArtwork",
-		"outputs": [],
-		"stateMutability": "payable",
-		"type": "function"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "string",
-				"name": "_title",
-				"type": "string"
-			},
-			{
-				"internalType": "uint256",
-				"name": "_price",
-				"type": "uint256"
-			}
-		],
-		"name": "listArtwork",
-		"outputs": [],
-		"stateMutability": "nonpayable",
-		"type": "function"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "uint256",
-				"name": "_id",
-				"type": "uint256"
-			},
-			{
-				"internalType": "uint256",
-				"name": "_newPrice",
-				"type": "uint256"
-			}
-		],
-		"name": "updateArtworkPrice",
-		"outputs": [],
-		"stateMutability": "nonpayable",
-		"type": "function"
-	},
-	{
-		"inputs": [],
-		"name": "artworkCount",
-		"outputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			}
-		],
-		"name": "artworks",
-		"outputs": [
-			{
-				"internalType": "uint256",
-				"name": "id",
-				"type": "uint256"
-			},
-			{
-				"internalType": "address payable",
-				"name": "artist",
-				"type": "address"
-			},
-			{
-				"internalType": "string",
-				"name": "title",
-				"type": "string"
-			},
-			{
-				"internalType": "uint256",
-				"name": "price",
-				"type": "uint256"
-			},
-			{
-				"internalType": "bool",
-				"name": "isForSale",
-				"type": "bool"
-			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	}
-]
-        let provider, signer, contract;
-
-        async function init() {
-            if (typeof window.ethereum !== 'undefined') {
-                provider = new ethers.providers.Web3Provider(window.ethereum);
-                await provider.send("eth_requestAccounts", []);
-                signer = provider.getSigner();
-                contract = new ethers.Contract(contractAddress, contractABI, signer);
-                document.getElementById('connectWallet').style.display = 'none';
-                document.getElementById('disconnectWallet').style.display = 'inline-block';
-                const address = await signer.getAddress();
-                document.getElementById('walletAddress').innerText = `Connected: ${address}`;
-                updateArtworkList();
-            } else {
-                document.getElementById('status').innerText = 'Please install MetaMask to use this dApp.';
-            }
-        }
-
-        function disconnect() {
-            provider = null;
-            signer = null;
-            contract = null;
-            document.getElementById('walletAddress').innerText = '';
-            document.getElementById('connectWallet').style.display = 'inline-block';
-            document.getElementById('disconnectWallet').style.display = 'none';
-        }
-
-        async function updateArtworkList() {
-            const artworkCount = await contract.artworkCount();
-            const artworkListElement = document.getElementById('artworkList');
-            artworkListElement.innerHTML = '<h2>Available Artworks</h2>';
-
-            for (let i = 1; i <= artworkCount; i++) {
-                const artwork = await contract.artworks(i);
-                if (artwork.isForSale) {
-                    const artworkElement = document.createElement('div');
-                    artworkElement.className = 'artwork';
-                    artworkElement.innerHTML = `
-                        <p>ID: ${artwork.id}</p>
-                        <p>Title: ${artwork.title}</p>
-                        <p>Artist: ${artwork.artist}</p>
-                        <p>Price: ${ethers.utils.formatEther(artwork.price)} ETH</p>
-                    `;
-                    artworkListElement.appendChild(artworkElement);
-                }
-            }
-        }
-
-        document.getElementById('connectWallet').addEventListener('click', init);
-        document.getElementById('disconnectWallet').addEventListener('click', disconnect);
-
-        document.getElementById('listArtwork').addEventListener('click', async () => {
-            const title = document.getElementById('artworkTitle').value;
-            const price = ethers.utils.parseEther(document.getElementById('artworkPrice').value);
-            try {
-                const tx = await contract.listArtwork(title, price);
-                await tx.wait();
-                document.getElementById('status').innerText = 'Artwork listed successfully!';
-                updateArtworkList();
-            } catch (error) {
-                document.getElementById('status').innerText = `Error: ${error.message}`;
-            }
-        });
-
-        document.getElementById('buyArtwork').addEventListener('click', async () => {
-            const id = document.getElementById('artworkId').value;
-            const artwork = await contract.artworks(id);
-            try {
-                const tx = await contract.buyArtwork(id, { value: artwork.price });
-                await tx.wait();
-                document.getElementById('status').innerText = 'Artwork bought successfully!';
-                updateArtworkList();
-            } catch (error) {
-                document.getElementById('status').innerText = `Error: ${error.message}`;
-            }
-        });
-
-        document.getElementById('updatePrice').addEventListener('click', async () => {
-            const id = document.getElementById('updateArtworkId').value;
-            const newPrice = ethers.utils.parseEther(document.getElementById('newPrice').value);
-            try {
-                const tx = await contract.updateArtworkPrice(id, newPrice);
-                await tx.wait();
-                document.getElementById('status').innerText = 'Artwork price updated successfully!';
-                updateArtworkList();
-            } catch (error) {
-                document.getElementById('status').innerText = `Error: ${error.message}`;
-            }
-        });
-
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
